# ctodo

./: .gitignore  .hgignore  .sparkleshare  .todo.sync  .travis.yml  Makefile  Makefile.win  README.md  SparkleShare.txt  build.bat  build_Release.bat  cctodo.c  ctodo.c  ctodo.h  ctodo.vcxproj  index.html  make.bat  sholy.c  sholy.conf  tests.bat  todo.c
clang/: Makefile.win  build.bat
contrib/sqlite/: sqlite3.h
dart/: index.html  todo.dart
junk/: .gitignore
mingw/: Makefile.win  build.bat
msvc/: build_Release.bat  build_Release_100.bat  build_Release_110.bat  build_Release_120.bat  build_dll_Release_100.bat  cctodo.vcxproj  cctodo_100.vcxproj  cctodo_110.vcxproj  cctodo_120.vcxproj  ctodo_120.sln  ctodo_dll_100.vcxproj  ctodo_lib.vcxproj  ctodo_lib_100.vcxproj  ctodo_lib_110.vcxproj  ctodo_lib_120.vcxproj  tests.cmd
src/: ctodo.c  ctodo.h
src/clients/: cctodo.c
src/clients/htodo/: project.cabal
src/clients/htodo/src/: Htodo.hs
win/: build_Debug.bat  build_Debug_100.bat  build_Release.bat  build_Release_100.bat  cctodo.vcxproj  cctodo_100.vcxproj  ctodo.sln  ctodo.vcxproj  ctodo_100.sln  ctodo_100.vcxproj  ctodo_lib.vcxproj  ctodo_lib_100.vcxproj
win/ftodo/: Program.fs  ftodo_100.fsproj
win/lib/: ctodo_lib_100.lib  vc100.idb
win/nwrap/: AssemblyInfo.cpp  ReadMe.txt  Stdafx.cpp  Stdafx.h  nwrap.cpp  nwrap.h  nwrap.vcxproj  nwrap_100.vcxproj
win/wtodo/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  wtodo.csproj  wtodo_100.csproj
