name:             HTODO
version:          0.0.1
license:          MIT
author:           Heather Mason <heather@live.ru>
maintainer:       Heather Mason <heather@live.ru>
homepage:         cynede.github.com
cabal-version:    >= 1.14
build-type:       Simple

source-repository head
  type:     hg
  location: https://bitbucket.org/Cynede/ctodo

-- flags

flag optimize
  description: apply compilation optimizations
  default:     True

-- build artifacts

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

  if flag(optimize)
    ghc-options: -O2 -fspec-constr -funbox-strict-fields -fdicts-cheap

  build-depends:
    base >= 4 && < 6

  exposed-modules:
    Hello
    Htodo

executable htodo
  main-is:          Main.hs
  hs-source-dirs:   bin
  default-language: Haskell2010
  ghc-options:      -Wall

  build-depends:
    HTODO,
    base >= 4 && < 6

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  hs-source-dirs:   src, test
  default-language: Haskell2010
  cpp-options:      -DTEST
  ghc-options:
    -main-is Test.runTests
    -Wall
    -fno-warn-missing-signatures
    -fno-warn-unused-binds

  build-depends:
    HTODO,
    base                       >= 4 && < 6,
    test-framework             == 0.6.1,
    test-framework-quickcheck2 == 0.2.12.3,
    test-framework-hunit       == 0.2.7,
    QuickCheck,
    HUnit
